--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social Media - A Deep Dive</title>
+    <title>Social Media - The Dangers Behind The Invisible Wall</title>
     <link rel="stylesheet" href="style.css"> 
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ESGEBQP7YJ"></script>
@@ -114,3 +114,4 @@
     
 </body>
 </html>
+
