--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <title>Social Media - The Dangers Behind The Invisible Wall</title>
     <link rel="stylesheet" href="style.css"> 
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-ESGEBQP7YJ"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FDJ8YTXXP2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-ESGEBQP7YJ');
+  gtag('config', 'G-FDJ8YTXXP2');
 </script>
 </head>
 <body>
@@ -114,4 +115,5 @@
     
 </body>
 </html>
+
 
